# contracts

./: Cargo.toml  README.md  build.sh  deploy.sh  ideas  package-lock.json  package.json  readme.md
contract/: Cargo.toml
contract/src/: lib.rs
factory/: Cargo.toml  deploy.sh
factory/src/: lib.rs
integration-tests/: package-lock.json
resource/: Cargo.toml  deploy.sh
resource/src/: lib.rs
