[package]
name = "chershare-resource"
version = "0.1.0"
authors = ["Felix Niemeyer <niemeyer.felix@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }

